--- a/index.html
+++ b/index.html
@@ -6,9 +6,214 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&family=Roboto&display=swap" rel="stylesheet">
 </head>
 
 <body>
+
+
+
+    <section class="main">
+        <section class="mainsection">
+
+            <div class="firstpartbody">
+                <div class="heading"> Player Heading1</div>
+                <div class="player">
+                    <div class="players">
+                        <img src="images/players/player-1.png" alt="" srcset="">
+                        <h3 class="playertext">Player1</h3>
+
+                    </div>
+                    <div class="players">
+                        <img src="images/players/player-2.png" alt="" srcset="">
+                        <h3 class="playertext">Player1</h3>
+
+                    </div>
+                    <div class="players">
+                        <img src="images/players/player-3.png" alt="" srcset="">
+                        <h3 class="playertext">Player1</h3>
+
+                    </div>
+                    <div class="players">
+                        <img src="images/players/player-4.png" alt="" srcset="">
+                        <h3 class="playertext">Player1</h3>
+
+                    </div>
+                    <div class="players">
+                        <img src="images/players/player-5.png" alt="" srcset="">
+                        <h3 class="playertext">Player1</h3>
+
+                    </div>
+                    <div class="players">
+                        <img src="images/players/player-6.png" alt="" srcset="">
+                        <h3 class="playertext">Player1</h3>
+
+                    </div>
+                </div>
+                <div class="divider">
+                    <hr>
+                </div>
+
+                <div class="heading"> Blog</div>
+                <div class="blogs">
+                    <div class="singleblog">
+                        <div class="blogimage">
+
+                            <img src="images/blogs/blog-1.png" alt="" srcset="">
+                        </div>
+
+                        <div class="bloginformation">
+
+                            <h3 class="blogtitle">13 of My Favorite
+                                UI/UX Goodies</h3>
+
+
+
+                            <span class="blogref"> By Danny Sapio </span>
+
+                        </div>
+
+                    </div>
+
+                    <div class="singleblog">
+                        <div class="blogimage">
+
+                            <img src="images/blogs/blog-2.png" alt="" srcset="">
+                        </div>
+
+                        <div class="bloginformation">
+
+                            <h3 class="blogtitle">13 of My Favorite
+                                UI/UX Goodies</h3>
+
+
+
+                            <span class="blogref"> By Danny Sapio </span>
+
+                        </div>
+
+                    </div>
+
+                    <div class="singleblog">
+                        <div class="blogimage">
+
+                            <img src="images/blogs/blog-3.png" alt="" srcset="">
+                        </div>
+
+                        <div class="bloginformation">
+
+                            <h3 class="blogtitle">13 of My Favorite
+                                UI/UX Goodies</h3>
+
+
+
+                            <span class="blogref"> By Danny Sapio </span>
+
+                        </div>
+
+                    </div>
+
+                    <div class="singleblog">
+                        <div class="blogimage">
+
+                            <img src="images/blogs/blog-4.png" alt="" srcset="">
+                        </div>
+
+                        <div class="bloginformation">
+
+                            <h3 class="blogtitle">13 of My Favorite
+                                UI/UX Goodies</h3>
+
+
+
+                            <span class="blogref"> By Danny Sapio </span>
+
+                        </div>
+
+                    </div>
+                </div>
+
+
+            </div>
+
+
+
+
+        </section>
+
+        <br>
+        <section class="secondsection">
+            <div class="courses">
+                <div class="blogimage">
+
+                    <img src="images/courses/course-1.png" alt="" srcset="">
+                </div>
+
+                <div class="bloginformation">
+
+                    <h3 class="blogtitle">13 of My Favorite
+                        UI/UX Goodies</h3>
+
+
+
+                    <span class="blogref"> By Danny Sapio </span>
+
+                </div>
+
+            </div>
+            <div class="courses">
+                <div class="blogimage">
+
+                    <img src="images/courses/course-2.png" alt="" srcset="">
+                </div>
+
+                <div class="bloginformation">
+
+                    <h3 class="blogtitle">13 of My Favorite
+                        UI/UX Goodies</h3>
+
+
+
+                    <span class="blogref"> By Danny Sapio </span>
+
+                </div>
+
+            </div>
+
+
+            <div class="courses">
+                <div class="blogimage">
+
+                    <img src="images/courses/course-3.png" alt="" srcset="">
+                </div>
+
+                <div class="bloginformation">
+
+                    <h3 class="blogtitle">13 of My Favorite
+                        UI/UX Goodies</h3>
+
+
+
+                    <span class="blogref"> By Danny Sapio </span>
+
+                </div>
+
+            </div>
+
+
+
+
+
+
+        </section>
+
+
+    </section>
+
 
 </body>
 
